[project]
name = "runninghub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "python-multipart>=0.0.21",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "psutil>=7.2.1",
]
